# Theme-Maker-Gnome

./: .gitignore  README.md  pyproject.toml
theme_maker/: __init__.py  __main__.py  applier.py  cli.py  palette.py
theme_maker/generators/: __init__.py  browsers.py  editors.py  extras.py  gtk.py  terminal.py
